--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "express": "^4.13.4",
-    "mongodb": "^2.1.7"
+    "mongodb": "^2.1.7",
+    "request": "^2.69.0"
   }
 }
